<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_icon_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_mytickets"
            android:icon="@drawable/ticket"
            android:title="@string/nav_mytickets" />


        <item
            android:id="@+id/nav_my_wallet"
            android:icon="@drawable/ic_my_wallet"
            android:title="@string/nav_my_wallet" />


        <item
            android:id="@+id/nav_book_my_ride"
            android:icon="@drawable/ic_book_my_ride"
            android:title="@string/nav_book_my_ride" />
        <item
            android:id="@+id/nav_my_rides"
            android:icon="@drawable/ic_my_ride"
            android:title="@string/nav_my_rides" />
        <item
            android:id="@+id/nav_my_kids"
            android:icon="@drawable/ic_icon_track"
            android:title="@string/nav_my_kids"
            android:visible="false" />

        <item
            android:id="@+id/nav_tariff_card"
            android:icon="@drawable/ic_tariff_card"
            android:title="@string/nav_tariff_card" />
        <item
            android:id="@+id/nav_promotion_code"
            android:icon="@drawable/ic_promotion_code"
            android:title="@string/nav_promotion_code" />
        <item
            android:id="@+id/nav_referral_code"
            android:icon="@drawable/ic_promotion_code"
            android:title="@string/nav_referral_code" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notification"
            android:title="@string/nav_notifications" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/nav_Feedback" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/faq"
            android:title="@string/nav_faq" />
        <item
            android:id="@+id/nav_terms_conditions"
            android:icon="@drawable/t_c_logo"
            android:title="@string/nav_terms" />
        <item
            android:id="@+id/nav_messenger_food"
            android:icon="@drawable/nav_messenger_food"
            android:title="@string/nav_messenger_food" />

        <item
            android:id="@+id/nav_messenger_medicine"
            android:icon="@drawable/nav_medicine"
            android:title="@string/nav_messenger_medicine" />
        <item
            android:id="@+id/nav_order_grocery"
            android:icon="@drawable/grocery"
            android:title="@string/nav_order_grocery" />
        <item
            android:id="@+id/nav_messenger_parcel"
            android:icon="@drawable/nav_parcel"
            android:title="@string/nav_messenger_parcel" />

    </group>


</menu>
