<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context="com.goyo.in.Login">

    <include layout="@layout/action_bar_home" android:visibility="gone"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/layout_margin">

        <LinearLayout
            android:id="@+id/logoname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_taxi" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="GoYo Login"
                android:textColor="#373435"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/logoname"
            android:layout_margin="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="0dp">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hint_login_email"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/et_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorGrey"></View>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_et"
                android:background="@android:color/transparent"
                android:hint="@string/hint_login_password"
                android:inputType="textPassword"
                android:maxLength="10"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/et_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginTop="10dp"
                android:background="@color/colorGrey"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:gravity="end">

                <Button
                    android:id="@+id/bt_signup"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/white_button"
                    android:text="@string/button_login_signup"
                    android:textAllCaps="true"
                    android:textColor="@color/colorButton" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="@dimen/margin_button"
                    android:layout_weight="1"
                    android:background="@drawable/black_button"
                    android:text="@string/button_login_login"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:gravity="end">

                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_login_forgot_password"
                    android:textColor="@color/colorGrey" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="@dimen/margin_top"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="0dp">
                <com.facebook.login.widget.LoginButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnFb"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/btnFacebook_main"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/facebook_button"
                    android:drawableLeft="@drawable/facebook_icon"

                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="Continue With FaceBook"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/gmail_button"

                    android:drawableLeft="@drawable/google_icon"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="Continue With Google"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
