<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:layout_marginBottom="16dp"
    tools:context="com.goyo.in.Login">

    <include layout="@layout/action_bar_home"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_taxi" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                    android:hint="@string/hint_signup_fullname"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrey"
                    android:textSize="@dimen/et_text" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGrey"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="Gender"
                        android:textColor="@color/colorBlack" />

                    <RadioGroup
                        android:id="@+id/g1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/r1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="Male" />

                        <RadioButton
                            android:id="@+id/r2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Female" />

                    </RadioGroup>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGrey"
                    android:visibility="gone"></View>

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_et"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_signup_email"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrey"
                    android:textSize="@dimen/et_text" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGrey"></View>

                <EditText
                    android:id="@+id/et_mo_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_et"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_sognup_mo_no"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrey"
                    android:textSize="@dimen/et_text" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGrey"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Select city :"
                        android:textColor="@color/colorButton"
                        android:textSize="10dp" />

                    <Spinner
                        android:id="@+id/spinner_city_list"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_weight="0.5"
                        android:background="@color/colorWhite"></Spinner>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGrey"
                    android:visibility="gone"></View>

                <EditText
                    android:id="@+id/et_pasword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_et"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_signup_password"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrey"
                    android:textSize="@dimen/et_text" />

                <View
                    android:id="@+id/vw1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGrey"></View>

                <EditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_et"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_signup_conf_password"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrey"
                    android:textSize="@dimen/et_text" />

                <View
                    android:id="@+id/vw2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGrey"></View>

                <EditText
                    android:id="@+id/et_referral_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="REFERRAL CODE"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrey"
                    android:textSize="@dimen/et_text"
                    android:visibility="gone" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGrey"
                    android:visibility="gone"></View>

                <Button
                    android:id="@+id/bt_submit"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="@dimen/margin_button"
                    android:background="@drawable/black_button"
                    android:text="@string/button_signup_submit"
                    android:textAllCaps="true"

                    android:textColor="@color/colorWhite" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
